# PaperChord

./: .gitignore  README.md  project.py  pyproject.toml  requirements.txt  test_project.py
Frontend/: app.js  index.html  styles.css
backend/: app.py  init_db.py  requirements.txt
backend/app/: main.py
backend/app/api/v1/endpoints/: auth.py
backend/app/core/: config.py  security.py
backend/app/db/: init_db.py  init_db.sql  session.py
backend/app/models/: db.sql
backend/app/repositories/: user_repo.py
backend/app/schemas/: user.py
backend/app/security/: tokens.py
