[tool.poetry]
name = "paperchord"
version = "0.1.0"
description = ""
authors = ["Shahdidul <theshahidkhan.2004@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.5"
nltk = "^3.9.2"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
pydantic = "^2.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
