[tool.poetry]
name = "paperchord"
version = "0.1.0"
description = ""
authors = ["Shahdidul <theshahidkhan.2004@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.128.0"
python-dotenv = "^1.2.1"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
pydantic-settings = "^2.12.0"
asyncpg = "^0.31.0"
python-multipart = "^0.0.21"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
