[tool.poetry]
name = "paperchord"
version = "0.1.0"
description = ""
authors = ["Shahdidul <theshahidkhan.2004@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
pydantic-settings = "^2.12.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.46"}
passlib = "^1.7.4"
pyjwt = "^2.10.1"
asyncpg = "^0.31.0"
pydantic = {extras = ["email"], version = "^2.12.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
